# palona-ralfibahar

./: .gitignore  README.md
backend/: Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_pgvector_extension.py  0002_create_core_tables.py
backend/app/: agent.py  catalog_qna.py  embeddings.py  ingest.py  main.py  models.py  schemas.py  search.py
backend/app/core/: logging.py  settings.py
backend/app/db/: session.py
backend/app/routers/: agent.py  products.py  tools.py
backend/tests/: test_image_search.py  test_search.py
data/: catalog.sample.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/products/[id]/: page.tsx
frontend/src/components/: AgentChat.tsx  Message.tsx  ProductCard.tsx  ProductGrid.tsx  RefineChips.tsx  UploadButton.tsx  index.ts
frontend/src/lib/: api.ts  useAgentChat.ts
scripts/: generate_catalog_from_fakestore.py
